ADded JQueryUI for modal dialog. Total refactoring of the javascript interface for editing templates.

--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,7 +1,10 @@
-<% nav_link :action => 'index' %>
-<% nav_link(@order.url, "View original order", :title => "Open order in Shopify admin interface") %>
+<% nav_link(@order.url, "Go back to original order", :title => "Open order in Shopify admin interface") %>
 
-<div id="sidebar">
+<!-- This is populated later via AJAX and popped up with the dialog function of JQueryUI -->
+<div id="modal-dialog">
+</div>
+
+<% sidebar do %>
   <h4>Select the template you want to print:</h4>
   <% if @tmpls.blank? %>
 
@@ -11,16 +14,16 @@
     <% form_tag({:action => 'print'}, :id => "selected-templates") do %>
       <ul id="print-list">
       <% @tmpls.each do |tmpl| %>
-        <li>
-          <%= check_box_tag 'print', tmpl.id, tmpl.default, :id => "template-checkbox-#{tmpl.id}" %>
-          <%= link_to tmpl.name, :controller => 'print_templates', :action => 'show', :id => tmpl %>
+        <li class="template-item">
+          <%= render :partial => 'template_checkbox', :locals => {:tmpl => tmpl} %>
         </li>
       <% end %>
+      <li id="template-create-link"><%= link_to_function "Create new template", "Template.create()" %></li>
       </ul>
-      <%= button_to_function "Print", "window.print()", :id => "print-button", :style => "display: none" %>
+      <%= button_to_function "Print", "window.print()", :id => "print-button" %>
     <% end %>
   <% end %>
-</div>
+<% end %>
 
 <div class="order box">
   <strong><%= @order.name %></strong>
@@ -29,19 +32,27 @@
   by <span class="note"><%= @order.billing_address.name %></span>
 </div>
 
+<%= preview_status %>
+
 <div id="preview">
-  <%= preview_status %>
-  
   <% @tmpls.each do |tmpl| %> <div id="preview-<%= tmpl.id %>"></div> <% end %>
 </div>
 
 
-<% javascript_tag do -%>
+<% content_for :javascript do %>
   $(document).ready(function() {
     checkSelectedTemplates('<%= @order.id %>');
     
     $("#selected-templates :checkbox").bind("change", function() {
       checkSelectedTemplates('<%= @order.id %>');
     });
+
+    // This is a bit of a hack: 
+    //   Get the ID of the template from it's link and pass it on to the preview() function.
+    //   It is solved like this (with #live) to make sure later inserted links respond to the preview function as well.
+    $(".template-item a").live("click", function() {
+      var template = $(this).attr('id').match(/\d+/)[0]
+      Template.preview(template ,<%= @order.id %>)
+    });
   });
-<% end -%>
+<% end %>
