--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,39 +7,30 @@
 
   <title><%= APP_NAME %></title>
 
-  <%= stylesheet_link_tag 'application' %>
+  <%= stylesheet_link_tag 'application', 'jquery-ui', :media => 'screen' %>
   <%= stylesheet_link_tag 'print', :media => 'print' %>
 
-  <%= javascript_include_tag :defaults %>
+  <%= javascript_include_tag :defaults, 'jquery.center' %>
   
-  <%= javascript_include_tag 'markitup/jquery.markitup.pack', 'markitup/sets/html/set', 'facebox', 'jquery.center' %>
-  <%= stylesheet_link_tag '/javascripts/markitup/skins/markitup/style.css', '/javascripts/markitup/sets/html/style.css', 'facebox' %>
+  <% javascript_tag do %>
+    <%= yield :javascript %>
+  <% end %>
 </head>
 	
 <body>
   
-  <div id="header">
-    <h1><%= link_to APP_NAME, '/' %></h1>      
-    
-    <p id="login-link">  
-      <% if current_shop %>
-          <span class="note">current shop</span> <%= link_to current_shop.url, "http://#{current_shop.url}", :class => 'shop_name' %> <span class="note">|</span>           
-          <%= link_to 'logout', :controller => "login", :action => 'logout' %>
-      <% end %>
-    </p>
-  </div>
-
   <div id="container" class="clearfix">
-    
-    <ul id="tabs">
-      <%= tab "Orders", {:controller => 'orders'}%>
-      <%= tab "Templates", {:controller => 'print_templates'} %>
-    </ul>
-  
     <!-- Flash error & notice-->
     <% if flash[:error] %> <div id="flasherrors"><%= flash[:error] %></div><% end %>
     <% if flash[:notice] %><div id="flashnotices"><%= flash[:notice] %></div><% end %>
-  
+    
+    <!-- Sidebar -->
+    <% if @sidebar_enabled %>
+      <div id="sidebar">
+        <%= yield :sidebar %>
+      </div>
+    <% end %>
+    
     <!-- begin div.main-->
     <div id="main">
       <%= nav_linklist_html %>
@@ -48,8 +39,7 @@
       <%= @content_for_layout %>   
     </div>
     <!-- end div.main -->
-        
   </div>
-    
+  
 </body>
 </html>
