--- a/app/views/print_templates/_form.html.erb
+++ b/app/views/print_templates/_form.html.erb
@@ -1,27 +1,3 @@
-<% nav_link :action => 'index' %>
-
-<div id="sidebar">
-  <h3>Help</h3>
-  Use HTML, CSS and Liquid to customize your templates. The editor can assist you with the syntax:
-  <dl>
-    <dt>Ctrl + “Key”</dt>
-    <dd>Trigger the corresponding button. Hover over a symbol to view the keyboard shortcut.</dt>
-
-    <dt>Tab<dt>
-    <dd>Move out of the current tag. Try it after you have inserted something with a button.</dd>
-    
-    <dt>Ctrl + Click on a button<dt>
-    <dd>Trigger the corresponding button and get the selection back. Helpful when you have selected some text.</dd>
-  </dl>
-
-  <h3>Learn more</h3>
-  <ul>
-    <li><%= link_to "Basics of the Liquid template language", "http://wiki.shopify.com/Liquid", :class => "action", :target => "wiki" %></li>
-    <li><%= link_to "Liquid variables you can use", "http://wiki.shopify.com/Order", :class => "action", :target => "wiki" %></li>
-    <li><%= link_to "HTML and CSS", "http://htmldog.com", :class => "action", :target => "web" %></li>
-  </ul>
-</div>
-
 <%= error_messages_for 'tmpl', :object_name => 'template' %>
 
 <% form_for(tmpl, :method => method, :html => {:id => "print_template_form"}) do |f| %>
@@ -30,21 +6,14 @@
     <%= f.text_field :name %>
   </div>
   
-  <%= f.text_area :body, :id => "html-editor", :cols => 80, :rows => 20 %>
-  
-  <div id="main-buttons">
-    <%= f.submit(method.to_s == 'post' ? 'Create' : 'Update') %>
-    or <%= preview_link(tmpl.id, nil, :templates => all_templates) %>
-  </div>
-  <%= preview_status %>
+  <%= f.text_area :body %>
 <% end %>
 
-<script type="text/javascript">
-  $(document).ready(function() {
-    $("#html-editor").markItUp(myHtmlSettings);
 
+<% content_for :javascript do %>
+  $(document).ready(function() {
     <% if method == 'post' %>
       $(":text:visible:enabled:first").focus().select();
     <% end %>
   });
-</script>
+<% end %>
