--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,13 +7,15 @@
 
   <title><%= APP_NAME %></title>
 
-  <%= stylesheet_link_tag 'application', 'jquery-ui', :media => 'screen' %>
+  <%= stylesheet_link_tag 'application', 'jquery-ui', 'jquery.notice', :media => 'screen' %>
   <%= stylesheet_link_tag 'print', :media => 'print' %>
 
-  <%= javascript_include_tag :defaults, 'jquery.center' %>
+  <%= javascript_include_tag :defaults, 'jquery.center', 'jquery.notice' %>
   
   <% javascript_tag do %>
-    <%= yield :javascript %>
+    $(document).ready(function() {
+      <%= yield :javascript %>
+    })
   <% end %>
 </head>
 	
