Template editing (heavily AJAX powered) now works: * Preview now in iFrame * removed Facebox * added preview action to template (raw html content) for iframe * some refactoring/cleaning

--- a/app/views/login/index.html.erb
+++ b/app/views/login/index.html.erb
@@ -17,3 +17,7 @@
 <script type="text/javascript">
    $(":text:visible:enabled:first").focus();
 </script>
+
+<% content_for :javascript do %>
+  Status.show("Please authenticate yourself by logging into your shop here first.")
+<% end %>
