--- a/app/views/orders/_template_checkbox.html.erb
+++ b/app/views/orders/_template_checkbox.html.erb
@@ -1,4 +1,4 @@
 <li class="template-item">
   <%= check_box_tag 'print', tmpl.id, tmpl.default, :id => "template-checkbox-#{tmpl.id}" %>
-  <%= link_to_remote tmpl.name, :url => {:controller => 'print_templates', :action => 'show', :id => tmpl}, :method => 'get', :html => {:id => "edit-link-#{tmpl.id}"}, :loading => "Status.show('Generating preview...')", :complete => "Status.hide()" %>
+  <%= link_to tmpl.name, "#", :id => "edit-link-#{tmpl.id}" %>
 </li>
