--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   <%= stylesheet_link_tag 'application', 'jquery-ui', 'jquery.notice', :media => 'screen' %>
   <%= stylesheet_link_tag 'print', :media => 'print' %>
 
-  <%= javascript_include_tag :defaults, 'jquery.center', 'jquery.notice' %>
+  <%= javascript_include_tag :defaults, 'jquery.notice' %>
   
   <% javascript_tag do %>
     $(document).ready(function() {
