Moved preview action to Order (from PrintTemplate). More: 	* Added some new icons to project, which aren't used yet (add, remove, trash) 	* Refactored javascript! 	* Refactored default template (all variables used) 	* AJAX preview (in IFrame) and editing completely working now! 	* Save last printed templates via AJAX

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,11 +15,11 @@
   <% javascript_tag do %>
     $(document).ready(function() {
       <%= yield :javascript %>
-
+      
       <!-- Flash error & notice-->
-      <% if flash[:notice] %> Status.show('<%= flash[:notice] %>')          <% end %>
-      <% if flash[:error]  %> Status.show('<%= flash[:error]  %>', 'error') <% end %>
-    })
+      <% if flash[:notice] %> Status.notify('<%= flash[:notice] %>'); <% end %>
+      <% if flash[:error]  %> Status.error('<%= flash[:error]  %>');  <% end %>
+    });
   <% end %>
 </head>
 	
